# Capstone

./: .gitignore  GIT_RULEBOOK.md  README.md  conversation_history.md  output.txt  requirements.txt  training_stats.json
Experiments/Alex/Loco_Shared/: pyproject.toml
Experiments/Alex/Loco_Shared/quadruped_locomotion/ai_trainer/: guardrails.py
Experiments/Alex/Loco_Shared/quadruped_locomotion/tasks/locomotion/config/spot/: __init__.py  env_cfg.py
Experiments/Alex/Loco_Shared/quadruped_locomotion/tasks/navigation/: __init__.py
Experiments/Alex/Loco_Shared/quadruped_locomotion/tasks/navigation/mdp/: __init__.py  rewards.py
Experiments/Alex/Loco_Shared/quadruped_locomotion/utils/: lr_schedule.py
Experiments/Alex/NAV_ALEX/: HOW_TO_SKILL_NAV_LITE.md  README.md  pyproject.toml
Experiments/Alex/NAV_ALEX/docs/: AI_COACH_NAV_MANUAL.md  FORTHEDOGS.md  H100_DEPLOYMENT_BUGS.md  NAV_TECHNICAL_MANUAL.md  TRAINING_GUIDE.md
Experiments/Alex/NAV_ALEX/scripts/: cole_arena_skillnav_lite.py
Experiments/Alex/NAV_ALEX/scripts/rsl_rl/: play_nav.py  smoke_test.py  train_nav.py  train_nav_no_coach.py
Experiments/Alex/NAV_ALEX/source/nav_locomotion/: setup.py
Experiments/Alex/NAV_ALEX/source/nav_locomotion/nav_locomotion/: __init__.py
Experiments/Alex/NAV_ALEX/source/nav_locomotion/nav_locomotion/ai_coach/: __init__.py  actuator.py  coach.py  decision_log.py  guardrails.py  metrics.py  prompt_builder.py
Experiments/Alex/NAV_ALEX/source/nav_locomotion/nav_locomotion/modules/: __init__.py  depth_cnn.py  loco_wrapper.py  nav_env_wrapper.py  skill_nav_lite.py
(+824 files in other folders)
